--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,6 @@
         "polymer"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#>=0.3.0 <1.0.0"
+        "polymer": "Polymer/polymer#master"
     }
 }
